--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/socialite": "^2.0",
         "laravelcollective/html": "^5.2",
         "activecampaign/api-php": "^1.3",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "pda/pheanstalk": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
